# convert2qt5signalslot

./: .gitignore  CMakeLists.txt  ClangUtils.cpp  ClangUtils.h  LICENSE  ObsoleteCode.cpp  PreProcessorCallback.cpp  PreProcessorCallback.h  Qt5SignalSlotSyntaxConverter.cpp  Qt5SignalSlotSyntaxConverter.h  README.md  config.h.cmake  llvmutils.h  main.cpp
cmake/: FindClang.cmake
tests/: CMakeLists.txt  config-tests.h.cmake  convertertest.py  convertertest.sh  fake_qobjectdefs.h  membercall.cpp.original  membercall.cpp.refactored  namespaces.cpp.original  namespaces.cpp.refactored  overloaded.cpp.original  overloaded.cpp.refactored  simple.cpp  simple.cpp.original  simple.cpp.refactored  testCommon.cpp  testCommon.h  testDisconnect.cpp  testDisconnect.h  testDisconnectSimple.cpp  testMain.cpp.cmake  testMembercall.cpp  testMissingMocInclude.cpp  testNamespaces.cpp  testNullptrCustomization.cpp  testOverloads.cpp  testQPointer.cpp  testQQuickItem.cpp  testScoping.cpp  testSimple.cpp  testSmartPointer.cpp  testUsingDirectives.cpp
tests/input/: disconnect.cpp  enum_scoping.cpp  membercall.cpp  namespaces.cpp  normalized_signatures.cpp  overloads.cpp  q_private_slot.cpp  q_private_slot_smart_ptr.cpp  qpointer.cpp  qquickitem.cpp  scoping.cpp  simple.cpp  smart_pointer.cpp  template_class.cpp  using_directives.cpp
tests/refactored/: disconnect-0.cpp  disconnect-NULL.cpp  disconnect-Q_NULLPTR.cpp  disconnect.cpp  enum_scoping.cpp  membercall.cpp  namespaces.cpp  normalized_signatures.cpp  overloads.cpp  q_private_slot.cpp  q_private_slot_smart_ptr.cpp  qpointer.cpp  qquickitem.cpp  scoping.cpp  simple.cpp  smart_pointer.cpp  template_class.cpp  using_directives.cpp
